added some more error handling

--- a/013/static/style.css
+++ b/013/static/style.css
@@ -16,3 +16,7 @@ th, td {
 	border: 1px solid black;
 	border-collapse: collapse;
 }
+.alert {
+    border: 1px solid red;
+    font-weight: bold;
+}
